# zectrix-word-machine

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  sdkconfig.defaults
docs/: USER_GUIDE.zh-CN.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  main.cc
main/audio/: audio_service.cc  audio_service.h
main/boards/zectrix-s3-epaper-4.2/: board_power_bsp.cc  charge_status.cc  config.json  custom_lcd_display.cc  custom_lcd_display.h  zectrix-s3-epaper-4.2.cc
main/components/78__esp-wifi-connect/: wifi_manager.cc
main/components/78__xiaozhi-fonts/: CMakeLists.txt
main/components/78__xiaozhi-fonts/src/: DejaVuSans_Phonetic_16.c  SourceHanSansSC_Vocab_18.c
main/display/: display.h  lcd_display.cc  lcd_display.h  ui_page.h  ui_page_registry.cc  ui_page_registry.h
main/display/pages/: vocabulary_page_adapter.cc  vocabulary_page_adapter.h
main/vocabulary/: KAOYAN_DECK_SOURCE.md  deck_store.cc  deck_store.h  kaoyan_full_deck.inc  progress_store.cc  progress_store.h  review_scheduler.cc  review_scheduler.h  sync_client.cc  sync_client.h  vocabulary_app.cc  vocabulary_app.h  vocabulary_types.h
scripts/: release.py  versions.py
scripts/spiffs_assets/: build.py
tools/: generate_kaoyan_deck.py  generate_kaoyanluan_deck.py
